# datum_gateway

./: CMakeLists.txt
.github/workflows/: build.yaml
src/: datum_api.c  datum_api.h  datum_blocktemplates.c  datum_coinbaser.c  datum_conf.c  datum_logger.c  datum_protocol.c  datum_sockets.c  datum_stratum.c  datum_submitblock.c  datum_utils.c  datum_utils.h
tests/: CMakeLists.txt  test_datum_utils.c
